[package]
name = "rustmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valkey-module = { path = "../valkeymodule-rs" }
valkey-module-macros = {  path = "../valkeymodule-rs/valkeymodule-rs-macros" }
anyhow = "1.0.86"

[features]
enable-system-alloc = ["valkey-module/enable-system-alloc"]

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
redis = "0.26.1"
