[package]
name = "rustmod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
valkey-module = { version = "0.1.2" }
valkey-module-macros = { version = "0.1.2" }
anyhow = "1.0.86"
linkme = "0.3.28"
lazy_static = "1.5.0"
chrono = "0.4.38"
cron = "0.12.1"

[dev-dependencies]
redis = "0.26.1"

[features]
default = ["enable-system-alloc"]
enable-system-alloc = ["valkey-module/enable-system-alloc"]

[lib]
crate-type = ["cdylib"]

